(lang dune 3.6)

(name Erugo)

(generate_opam_files true)

(source
 (github na4n/erugo))

(authors "Nathan Annareddy")

(maintainers "Nathan Annareddy")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name Erugo)
 (synopsis "A project")
 (description "This is the project")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
